--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -3,12 +3,16 @@
 \usepackage[plain,shortend]{algorithm2e}
 \usepackage[backend=biber,style=numeric]{biblatex}
 \usepackage{bytefield}
+\usepackage{booktabs}
 \usepackage{caption}
 \usepackage{currfile}
 \usepackage{float}
 \usepackage[margin={2cm}]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
+\usepackage{pbox}
+\usepackage{ragged2e}
+\usepackage{tabularx}
 \usepackage{tikz}
 \usepackage{url}
 \usepackage{xargs}
