Add a cursory description of how we will verify the implementation.
 On branch impl/uarch-spec
 Changes to be committed:
	modified:   docs/ise-implementation.tex

--- a/docs/ise-implementation.tex
+++ b/docs/ise-implementation.tex
@@ -511,10 +511,52 @@ the implementation.}
 \section{Integration Guide}
 \label{sec:integration}
 
+TBD
 
 \section{Verification}
 \label{sec:verification}
 
+Verification of the ISE implementation will be done using a mixture of
+constrained random testing and formal methods.
+Both methods will use the same single cycle, functional model of the ISE as a
+golden reference model (GRM).
+Outputs of the implementation will be compared against the GRM for
+correctness.
+
+\subsection{Verilog Golden Reference Model}
+
+The GRM will be written using functional verilog.
+
+\begin{itemize}
+\item Each instruction will be implemented as a verilog task.
+\item The GRM will have the same interface as the implementation.
+\item The GRM will snoop on the implementation interface and produce a
+    predicted result for all input instructions.
+\item All transactions on the memory and CPU/COP interface will be modelled
+    and checked against the GRM.
+\end{itemize}
+
+Using bounded model checking (BMC) the aim will be to make sure that after
+$12$ clock ticks, the model and implementation have not diverged.
+After that check is passed, we switch to induction mode and show that the two
+will never diverge after that point.
+
+We use $12$ clock ticks because it is enough for all combinations of 
+instruction tripples to be executed and experience things like memory
+and writeback stalling.
+
+\subsection{Formal Verification Flow}
+
+The formal flow will use Yosys as a model checker to ensure that for any
+sequence of inputs, the outputs of the implementation and the GRM will remain
+the same.
+
+\subsection{Constrained Random Flow}
+
+The CRT flow will re-use much of the same environment of the formal flow,
+but will allow loading of simple assembly program sequences into a
+memory model. This will allow us to create a set of fast unit tests, and to
+re-create bugs found in the formal flow.
 
 \printbibliography
 
